# chatdb

./: .gitignore  LICENSE  README.md  chatdb.py  db.py  main.py  pyproject.toml  schema.py  tasks.py  utils.py
tests/: test_insert_chat.py
